syntax = "proto3";

package ygtrack;

option go_package = "ygtrack/proto";

message Metrics {
  	string id = 1;
    enum MetricsType {
        GAUGE = 0;        
        COUNTER = 1;
    }
	MetricsType mType = 2;
    int64 delta = 3;
    double value = 4;
    string hash = 5;
}


message Response {
  string error = 1; 
}

service MetricService {
  rpc SendList (stream Metrics) returns (Response);
  rpc Send (Metrics) returns (Response);
} 